// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsContainer /> > should render as expected when accounts exist 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-1b6hzwq"
  >
    <h1
      class="chakra-heading css-mytsjf"
    >
      accounts
    </h1>
    <button
      class="chakra-button css-1hbeh4x"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="css-64eh94"
  >
    <div
      class="css-uqvmb9"
    >
      <p
        class="css-23kn1y"
      >
        Net Worth
      </p>
      <h2
        class="chakra-heading css-mz3cgo"
      >
        £1,300
      </h2>
    </div>
    <div
      class="css-mnx6qw"
    >
      <p
        class="css-23kn1y"
      >
        Total Assets
      </p>
      <h2
        class="chakra-heading css-v5zr7v"
      >
        £1,800
      </h2>
    </div>
    <div
      class="css-o53z0y"
    >
      <p
        class="css-23kn1y"
      >
        Total Liabilities
      </p>
      <h2
        class="chakra-heading css-vpgg7p"
      >
        £500
      </h2>
    </div>
  </div>
  <div
    class="css-1uphe7b"
  >
    <div
      class="css-1p3i3l9"
    >
      <h2
        class="chakra-heading css-12uwiey"
      >
        Current
      </h2>
      <div
        class="css-15fx9a5"
      >
        AccountsCard
        AccountsCard
      </div>
    </div>
    <div
      class="css-1p3i3l9"
    >
      <h2
        class="chakra-heading css-12uwiey"
      >
        Saving
      </h2>
      <div
        class="css-15fx9a5"
      >
        AccountsCard
        AccountsCard
        AccountsCard
      </div>
    </div>
    <div
      class="css-1p3i3l9"
    >
      <h2
        class="chakra-heading css-12uwiey"
      >
        Mortgage
      </h2>
      <div
        class="css-15fx9a5"
      >
        AccountsCard
      </div>
    </div>
    <div
      class="css-1p3i3l9"
    >
      <h2
        class="chakra-heading css-12uwiey"
      >
        Loan
      </h2>
      <div
        class="css-15fx9a5"
      >
        AccountsCard
      </div>
    </div>
    <div
      class="css-1p3i3l9"
    >
      <h2
        class="chakra-heading css-12uwiey"
      >
        Owed
      </h2>
      <div
        class="css-15fx9a5"
      >
        AccountsCard
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountsContainer /> > should render as expected when no accounts exist 1`] = `
<div>
  <script
    nonce=""
  >
    ((e,i,s,u,m,a,l,h)=&gt;
    {let d=document.documentElement,w=["light","dark"];function p(n){(Array.isArray(e)?e:[e]).forEach(y=&gt;
    {let k=y==="class",S=k&&a?m.map(f=&gt;
    a[f]||f):m;k?(d.classList.remove(...S),d.classList.add(a&&a[n]?a[n]:n)):d.setAttribute(y,n)}),R(n)}function R(n){h&&w.includes(n)&&(d.style.colorScheme=n)}function c(){return window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"}if(u)p(u);else try{let n=localStorage.getItem(i)||s,y=l&&n==="system"?c():n;p(y)}catch(n){}})("class","theme","system",null,["light","dark"],null,true,true)
  </script>
  <div
    class="css-1b6hzwq"
  >
    <h1
      class="chakra-heading css-mytsjf"
    >
      accounts
    </h1>
    <button
      class="chakra-button css-1hbeh4x"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="css-1uphe7b"
  />
</div>
`;
